Fix margin spacing for login form and landing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,11 +138,11 @@ h1 a {
         margin-bottom: 1em;
     }
     .index-login-container {
-        margin-top: 4em;
+        margin-top: 5em;
         padding: 0 1.5em 0 1.5em;
     }
     .login-container {
-        margin-top: 2em;
+        margin-top: 5em;
         padding: 0 1.5em 0 1.5em;
     }
     .forgot-password-form {
